syntax = "proto3";

package blog;

option java_multiple_files = true;
option java_package = "coffeeAndTea.GRPCJavaLearning.blog";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message ReadBlogRequest {
  string id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

service BlogService {
  rpc createBlog(CreateBlogRequest) returns (CreateBlogResponse) {};

  rpc readBlog(ReadBlogRequest) returns (ReadBlogResponse) {};
}